--- a/rs-clone/package.json
+++ b/rs-clone/package.json
@@ -21,7 +21,9 @@
     "@angular/router": "~11.0.5",
     "normalize.css": "^8.0.1",
     "rxjs": "~6.6.0",
+    "stats.js": "^0.17.0",
     "three": "^0.124.0",
+    "three-fps-counter": "^0.2.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
@@ -31,6 +33,7 @@
     "@angular/compiler-cli": "~11.0.5",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
+    "@types/stats.js": "^0.17.0",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
