--- a/rs-clone/package.json
+++ b/rs-clone/package.json
@@ -15,10 +15,13 @@
     "@angular/common": "~11.0.5",
     "@angular/compiler": "~11.0.5",
     "@angular/core": "~11.0.5",
+    "@angular/fire": "^6.1.4",
     "@angular/forms": "~11.0.5",
     "@angular/platform-browser": "~11.0.5",
     "@angular/platform-browser-dynamic": "~11.0.5",
     "@angular/router": "~11.0.5",
+    "@firebase/app": "^0.6.13",
+    "firebase": "^8.2.3",
     "normalize.css": "^8.0.1",
     "rxjs": "~6.6.0",
     "stats.js": "^0.17.0",
