--- a/rs-clone/package.json
+++ b/rs-clone/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~11.0.5",
     "@angular/router": "~11.0.5",
     "@firebase/app": "^0.6.13",
+    "@loadingio/loading-bar": "^0.1.1",
     "bootstrap-icons": "^1.3.0",
     "firebase": "^8.2.3",
     "normalize.css": "^8.0.1",
